# DarkRust-Bot

./: Cargo.toml
src/: main.rs
src/commands/: ping.rs
